# osm_denorm

./: .gitignore  README.org  count_ways.py  dedupe.rb  pending_multipoly_cache.py  pytest.ini  requirements.txt
cpp/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  osm_denorm.cxx  osmdenorm  osmium_area_test.cpp
osm_denorm/: core.py  count_ways.py  counters.py  pending_multipoly_cache.py  rel_wrapper.py  util.py  way_wrapper.py
osmium-tool-example/: config.json  run.sh
tests/: dc_sample.pbf  test_denormalizing.py  test_util.py
